--- a/test.html
+++ b/test.html
@@ -6,9 +6,17 @@
     </head>
 
     <body>
+        <iframe> src=" " title = "me" alt = "a picture of me"</iframe>
         <h1>About me!</h1>
+        <h2>Some Words About Me:</h2>
         <p>I'm making this page pretty quick, here. I like a lot of things. I was behind but I'm catching up.</p>
         <p>I think I need to make a new ssh code after class-we'll see how that goes.</p>
+
+        <ul>
+            <li>Email</li>
+            <li>Github</li>
+            <li>Portfolio</li>
+        </ul>
     </body>
 
 </html>
