--- a/test.html
+++ b/test.html
@@ -2,6 +2,18 @@
 <html>
     <head>
         <title>About me!</title>
+        <style>
+            h1 {
+                color:blueviolet;
+                text-align: center;
+                text-decoration: line-through;
+            }
+
+            p {
+                font-family: Arial, Helvetica, sans-serif
+
+            }
+        </style>
 
     </head>
 
