--- a/1hw/index.html
+++ b/1hw/index.html
@@ -33,21 +33,21 @@
     <!--Website body.-->
     <main>
         <article>
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt ="A notebook open to show a diagram displaying the basic elements of SEO strategy."/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </article>
         <article>
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Man looking at graph on laptop, which reputation trending up." />
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Man looking at a graph on laptop, which shows reputation trending up." />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </article>
         <article>
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Top-down image of table surrounded by workers, covered with icons associated with social media./>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
