--- a/1hw/index.html
+++ b/1hw/index.html
@@ -47,7 +47,7 @@
             </p>
         </article>
         <article>
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Top-down image of table surrounded by workers, covered with icons associated with social media./>
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Top-down image of table surrounded by workers, covered with icons associated with social media"./>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
