--- a/1hw/index.html
+++ b/1hw/index.html
@@ -32,47 +32,47 @@
 
     <!--Website body.-->
     <main>
-        <article>
+        <section class="main">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt ="A notebook open to show a diagram displaying the basic elements of SEO strategy."/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </article>
-        <article>
+        </section>
+        <section class="main">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Man looking at a graph on laptop, which shows reputation trending up." />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </article>
-        <article>
+        </section>
+        <section class="main">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Top-down image of table surrounded by workers, covered with icons associated with social media"./>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </article>
+        </section>
     </main>
 
     <!--Sidebar.-->
     <aside>
-        <section>
+        <section class="side">
             <h2>Lead Generation</h2>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
-        <section>
+        <section class="side">
             <h2>Brand Awareness</h2>
             <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
-        <section>
-            <h2>Cost Management</h2>
+        <section class="side">
+            <h2>Cost Management </h2>
             <img src="./assets/images/cost-management.png"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
