--- a/1hw/index.html
+++ b/1hw/index.html
@@ -7,7 +7,7 @@
     <title>Horiseon </title>
 </head>
 
-<!--Comments refer to code below-This is the navigation bar.-->
+<!--Comments refer to code below--this is the navigation bar.-->
 <body>
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
@@ -26,31 +26,34 @@
         </nav>
     </header>
 
-    <!--This element contains the 'header' image for the site. Left without-->
+    <!--This element contains the background image for the site. Aesthetic, so no alt tag.-->
     <figure> 
     </figure> 
 
     <!--Website body.-->
     <main>
-        <section class="main">
+        <section class="main" id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt ="A notebook open to show a diagram displaying the basic elements of SEO strategy."/>
             <h2>Search Engine Optimization</h2>
             <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. 
+                Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
-        <section class="main">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Man looking at a graph on laptop, which shows reputation trending up." />
+        <section class="main" id="online-reputation-management">
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Man looking at a graph on laptop, which shows reputation trending up."/>
             <h2>Online Reputation Management</h2>
             <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. 
+                Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section class="main">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Top-down image of table surrounded by workers, covered with icons associated with social media"./>
+        <section class="main" id="social-media-marketing">
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Top-down image of table surrounded by workers, covered with icons associated with social media."/>
             <h2>Social Media Marketing</h2>
             <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, 
+                using analytics to find the right markets and increase your lead generation.
             </p>
         </section>
     </main>
@@ -73,7 +76,7 @@
         </section>
         <section class="side">
             <h2>Cost Management </h2>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
