--- a/1hw/index.html
+++ b/1hw/index.html
@@ -48,7 +48,7 @@
                 Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section class="main" id="social-media-marketing">
+        <section class="main" id="social-media-marketinggit">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Top-down image of table surrounded by workers, covered with icons associated with social media."/>
             <h2>Social Media Marketing</h2>
             <p>
@@ -62,21 +62,21 @@
     <aside>
         <section class="side">
             <h2>Lead Generation</h2>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="Clipart: gear producing coin." />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
         <section class="side">
             <h2>Brand Awareness</h2>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="Clipart: person with shining bulb for head." />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
         <section class="side">
             <h2>Cost Management </h2>
-            <img src="./assets/images/cost-management.png" />
+            <img src="./assets/images/cost-management.png" alt="Clipart: a gear and three coins." />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
