--- a/1hw/index.html
+++ b/1hw/index.html
@@ -2,9 +2,9 @@
 <html lang="en-us">
 
 <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon </title>
+    <meta charset="UTF-8"/>
+    <link rel="stylesheet" href="./assets/css/style.css"/>
+    <title>Horiseon</title>
 </head>
 
 <!--Comments refer to code below--this is the navigation bar.-->
@@ -26,14 +26,14 @@
         </nav>
     </header>
 
-    <!--This element contains the background image for the site. Aesthetic, so no alt tag.-->
+    <!--This element contains the background image for the site. Aesthetic rather then content, so no alt tag.-->
     <figure> 
     </figure> 
 
     <!--Website body.-->
     <main>
         <section class="main" id="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt ="A notebook open to show a diagram displaying the basic elements of SEO strategy."/>
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="A notebook open to show a diagram displaying the basic elements of SEO strategy."/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. 
@@ -48,7 +48,7 @@
                 Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section class="main" id="social-media-marketinggit">
+        <section class="main" id="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Top-down image of table surrounded by workers, covered with icons associated with social media."/>
             <h2>Social Media Marketing</h2>
             <p>
@@ -62,21 +62,21 @@
     <aside>
         <section class="side">
             <h2>Lead Generation</h2>
-            <img src="./assets/images/lead-generation.png" alt="Clipart: gear producing coin." />
+            <img src="./assets/images/lead-generation.png" alt="Clipart: a gear producing a coin."/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
         <section class="side">
             <h2>Brand Awareness</h2>
-            <img src="./assets/images/brand-awareness.png" alt="Clipart: person with shining bulb for head." />
+            <img src="./assets/images/brand-awareness.png" alt="Clipart: person with shining bulb for head."/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
         <section class="side">
             <h2>Cost Management </h2>
-            <img src="./assets/images/cost-management.png" alt="Clipart: a gear and three coins." />
+            <img src="./assets/images/cost-management.png" alt="Clipart: a gear and three coins."/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
