--- a/2hw/portfolio.html
+++ b/2hw/portfolio.html
@@ -13,15 +13,20 @@
 </head>
 
 <body>
-    <div class="page-header">
-        <h1>Max Nicolai</h1>
-    </div>
-    <nav class="navbar avbar-expand-lg navbar-dark bg-dark">
-        <ul class="nav nav-pills">
-            <li role="presentation"><a href="index.html">About</a></li>
-            <li role="presentation"><a href="portfolio.html">Portfolio</a></li> 
-            <li role="presentation"><a href="contact.html">Contact</a></li>
-        </ul>
+    <nav class="navbar avbar-expand-lg navbar-dark bg-dark navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <h1>Max Nicolai</h1>
+              </a>
+            </div>
+        </div>
+        <div class = "container">
+            <ul class="nav nav-pills">
+                <li role="presentation"><a href="index.html">About</a></li>
+                <li role="presentation"><a href="portfolio.html">Portfolio</a></li> 
+                <li role="presentation"><a href="contact.html">Contact</a></li>
+            </ul>
+        </div>  
     </nav>
 </body>
 </html>
