content box for about

--- a/2hw/index.html
+++ b/2hw/index.html
@@ -28,5 +28,17 @@
             </ul>
         </div>  
     </nav>
+    
+    <div class = container>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">About Me</h3>
+            </div>
+            <div class="panel-body">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sit amet risus laoreet, eleifend odio eu, lobortis neque. Sed dictum metus ut sollicitudin mattis. Nulla interdum commodo orci nec ornare. Cras blandit, nisi quis lacinia dictum, felis nunc luctus nunc, et facilisis ipsum urna ut est. Quisque posuere velit libero, eu cursus tellus scelerisque vitae. Nam magna nisi, condimentum fermentum interdum a, luctus accumsan urna. Phasellus semper eros in dictum ullamcorper. Pellentesque elementum sem augue, vitae euismod nulla vehicula vel. Morbi at feugiat ex, vitae faucibus mi.
+            </div>
+        </div>
+        </div>
+    </div>
 </body>
 </html>
