--- a/2hw/index.html
+++ b/2hw/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+    <!--I know this is an absurd amount of stylesheets. I had a rough time getting consistent results at the start of this project, and now if I try to remove some of them my navbar breaks and I can't tell why. I'd like to fix that, but it's low priority to me compared to getting everything running.-->
+    <!--Bootstrap Base CSS and Theme-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!--Personal CSS-->
     <link rel="stylesheet" href=style.css>
 </head>
 
@@ -46,7 +48,7 @@
                         <article>
                             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sit amet risus laoreet, eleifend odio eu, lobortis neque. Sed dictum metus ut sollicitudin mattis. Nulla interdum commodo orci nec ornare. Cras blandit, nisi quis lacinia dictum, felis nunc luctus nunc, et facilisis ipsum urna ut est. Quisque posuere velit libero, eu cursus tellus scelerisque vitae. Nam magna nisi, condimentum fermentum interdum a, luctus accumsan urna. Phasellus semper eros in dictum ullamcorper. Pellentesque elementum sem augue, vitae euismod nulla vehicula vel. Morbi at feugiat ex, vitae faucibus mi.</p>
                         </article>
-                      </div>
+                    </div>
                     </div>
                 </div>
             </div>
