--- a/2hw/portfolio.html
+++ b/2hw/portfolio.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+     <!--I know this is an absurd amount of stylesheets. I had a rough time getting consistent results at the start of this project, and now if I try to remove some of them my navbar breaks and I can't tell why. 
+        I'd like to fix that, but it's low priority to me compared to getting everything running.-->
+     <!--Bootstrap Base CSS and Theme-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">ß
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!--Personal Stylesheet-->
     <link rel="stylesheet" href=style.css>
 </head>
 
@@ -16,11 +19,12 @@
     <nav class="navbar avbar-expand-lg navbar-dark bg-dark navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
+              <a class="navbar-brand"></a>
                 <h1>Max Nicolai</h1>
               </a>
             </div>
         </div>
-        <div class = "container">
+        <div class = "container-fluid">
             <ul class="nav nav-pills">
                 <li role="presentation"><a href="index.html">About</a></li>
                 <li role="presentation"><a href="portfolio.html">Portfolio</a></li> 
