nav comments now on all pages

--- a/2hw/contact.html
+++ b/2hw/contact.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href=style.css> 
 </head>
 <body>
+    <!--Below is the navbar, first what functions as page header-->
     <nav class="navbar avbar-expand-lg navbar-dark bg-dark navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -22,6 +23,7 @@
               </a>
             </div>
         </div>
+        <!--The ul here is the bar itself-->
         <div class = "container">
             <ul class="nav nav-pills">
                 <li role="presentation"><a href="index.html">About</a></li>
