--- a/2hw/portfolio.html
+++ b/2hw/portfolio.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <!--Below is the navbar, first what functions as page header-->
     <nav class="navbar avbar-expand-lg navbar-dark bg-dark navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -24,6 +25,7 @@
               </a>
             </div>
         </div>
+        <!--The ul here is the bar itself-->
         <div class = "container-fluid">
             <ul class="nav nav-pills">
                 <li role="presentation"><a href="index.html">About</a></li>
