removed stylesheets so i could have a media box

--- a/2hw/test.html
+++ b/2hw/test.html
@@ -27,6 +27,18 @@
                 <li role="presentation"><a href="contact.html">Contact</a></li>
             </ul>
         </div>  
+
+        <div class="media">
+          <div class="media-left">
+            <a href="#">
+              <img class="media-object" src="..." alt="...">
+            </a>
+          </div>
+          <div class="media-body">
+            <h4 class="media-heading">Media heading</h4>
+            ...
+          </div>
+        </div>
     </nav>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
