--- a/2hw/test.html
+++ b/2hw/test.html
@@ -12,33 +12,23 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
-    <nav class="navbar avbar-expand-lg navbar-dark bg-dark navbar-fixed-top">
-        <div class="container-fluid">
-            <div class="navbar-header">
-              <a class="navbar-brand"></a>
-                <h1>Max Nicolai</h1>
-              </a>
-            </div>
-        </div>
-        <div class = "container-fluid">
-            <ul class="nav nav-pills">
-                <li role="presentation"><a href="index.html">About</a></li>
-                <li role="presentation"><a href="portfolio.html">Portfolio</a></li> 
-                <li role="presentation"><a href="contact.html">Contact</a></li>
-            </ul>
-        </div>  
-
-        <div class="media">
-          <div class="media-left">
-            <a href="#">
-              <img class="media-object" src="..." alt="...">
-            </a>
-          </div>
-          <div class="media-body">
-            <h4 class="media-heading">Media heading</h4>
-            ...
-          </div>
-        </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+      </div>
     </nav>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
