--- a/2hw/index.html
+++ b/2hw/index.html
@@ -31,7 +31,16 @@
             </li>
           </ul>
         </div>
-      </nav>
+    </nav>
+      <main>
+        <div class="media">
+            <img src="..." class="mr-3" alt="...">
+            <div class="media-body">
+              <h5 class="mt-0">Media heading</h5>
+              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+            </div>
+        </div>  
+      </main>
 
       <!--Bootstrap JS links-->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
