actually working as per examples. not a media box anymore, single column with alignments has worked.

--- a/2hw/index.html
+++ b/2hw/index.html
@@ -32,15 +32,20 @@
           </ul>
         </div>
     </nav>
-      <main>
-        <div class="media">
-            <img src="hshot.jpg" class="mr-3" alt="A picture where I don't look too uncomfortable.">
-            <div class="media-body">
-              <h5 class="mt-0">Media heading</h5>
-              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-            </div>
-        </div>  
-      </main>
+
+        <div class="container">
+            <div class = "row">
+                <div class="column-md">
+                <h5 class="mt-0">About Me</h5>
+                  <img src="hshot.jpg" class="img-fluid rounded float-left" id="hs" alt="A picture where I don't look too uncomfortable.">
+                    <p>
+                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                    </p>
+               </div>
+            </div>  
+        </div>   
+ 
+    
 
       <!--Bootstrap JS links-->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
