nice baseline for contact page is in, corrected page titles

--- a/2hw/contact.html
+++ b/2hw/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Contact</title>
     <!--Bootstrap Base CSS and Theme-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
         <!--Personal Stylesheet-->
@@ -32,6 +32,25 @@
           </ul>
         </div>
       </nav>
+    <main>
+        <div class="container" id="contact">
+        <form>
+            <div class="form-group">
+              <label for="exampleFormControlInput1">Name</label>
+              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="J Doe">
+            </div>
+            <div class="form-group">
+                <label for="exampleFormControlInput1">Email address</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+              </div>
+            <div class="form-group">
+              <label for="exampleFormControlTextarea1"> Message</label>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+          </form>
+          <input class="btn btn-primary" type="submit" value="Submit">
+        </div>
+    </main>
 
     <!--Bootstrap JS links-->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
