--- a/2hw/portfolio.html
+++ b/2hw/portfolio.html
@@ -32,7 +32,65 @@
           </ul>
         </div>
       </nav>
-
+    <main>
+      <div class="album py-5 bg-light">
+          <div class="container">
+              <div class="Row">
+                <div class="col-md-4">
+                  <div class="card mb-3">
+                    <img src="https://placeimg.com/200/200/nature" class="card-img-top" alt="Placeholder">
+                    <div class="card-footer">
+                        <h5>Test</h5>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-3">
+                      <img src="https://placeimg.com/200/200/nature" class="card-img-top" alt="Placeholder">
+                      <div class="card-footer">
+                          <h5>Test</h5>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="card mb-3">
+                      <img src="https://placeimg.com/200/200/nature" class="card-img-top" alt="Placeholder">
+                      <div class="card-footer">
+                          <h5>Test</h5>
+                      </div>
+                    </div>
+                  </div>
+              </div>
+              <div class="Row">
+                <div class="col-md-4">
+                  <div class="card mb-3">
+                    <img src="https://placeimg.com/200/200/nature" class="card-img-top" alt="Placeholder">
+                    <div class="card-footer">
+                        <h5>Test</h5>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-3">
+                      <img src="https://placeimg.com/200/200/nature" class="card-img-top" alt="Placeholder">
+                      <div class="card-footer">
+                          <h5>Test</h5>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="card mb-3">
+                      <img src="https://placeimg.com/200/200/nature" class="card-img-top" alt="Placeholder">
+                      <div class="card-footer">
+                          <h5>Test</h5>
+                      </div>
+                    </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+        
+    </main>
     <!--Bootstrap JS links-->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
