problem was a typo, fixed.

--- a/2hw/portfolio.html
+++ b/2hw/portfolio.html
@@ -35,7 +35,7 @@
     <main>
       <div class="album py-5 bg-light">
           <div class="container">
-              <div class="Row">
+              <div class="row">
                 <div class="col-md-4">
                   <div class="card mb-3">
                     <img src="https://placeimg.com/200/200/nature" class="card-img-top" alt="Placeholder">
@@ -61,7 +61,7 @@
                     </div>
                   </div>
               </div>
-              <div class="Row">
+              <div class="row">
                 <div class="col-md-4">
                   <div class="card mb-3">
                     <img src="https://placeimg.com/200/200/nature" class="card-img-top" alt="Placeholder">
