added title for portfolio page. justified rows to start for consistency, just in case

--- a/2hw/portfolio.html
+++ b/2hw/portfolio.html
@@ -31,11 +31,17 @@
             </li>
           </ul>
         </div>
-      </nav>
+    </nav>
+
     <main>
       <div class="album py-5 bg-light">
-          <div class="container">
-              <div class="row">
+          <div class="container-md">
+              <div class ="row justify-content-start">
+                <div class = col-md>
+                <h2>Portfolio</h2>
+                </div>
+              </div>
+              <div class="row justify-content-start">
                 <div class="col-md-4">
                   <div class="card mb-3">
                     <img src="https://placeimg.com/200/200/nature" class="card-img-top" alt="Placeholder">
@@ -61,7 +67,7 @@
                     </div>
                   </div>
               </div>
-              <div class="row">
+              <div class="row justify-content-start">
                 <div class="col-md-4">
                   <div class="card mb-3">
                     <img src="https://placeimg.com/200/200/nature" class="card-img-top" alt="Placeholder">
