--- a/2hw/index.html
+++ b/2hw/index.html
@@ -34,7 +34,7 @@
     </nav>
 
         <div class="container">
-            <div class = "row">
+            <div class = "row justify-content-start">
                 <div class="column-md">
                 <h5 class="mt-0">About Me</h5>
                   <img src="hshot.jpg" class="img-fluid rounded float-left" id="hs" alt="A picture where I don't look too uncomfortable.">
