--- a/2hw/index.html
+++ b/2hw/index.html
@@ -34,9 +34,13 @@
     </nav>
 
         <div class="container">
-            <div class = "row justify-content-start">
+            <div class="row justify-content-start">
                 <div class="column-md">
-                <h5 class="mt-0">About Me</h5>
+                  <h2>About Me</h2>
+                </div>
+            </div>
+            <div class="row justify-content-start">
+                <div class="column-md">
                   <img src="hshot.jpg" class="img-fluid rounded float-left" id="hs" alt="A picture where I don't look too uncomfortable.">
                     <p>
                     Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
