I like the set width here, but I can't get the text/image to line up how i'd like on large vps no matter what I try w/ columns. Saving this version, trying a switch to a card w/columns-should default to desired presentation

--- a/2hw/index.html
+++ b/2hw/index.html
@@ -35,18 +35,23 @@
 
         <div class="container">
             <div class="row justify-content-start">
-                <div class="column-md">
+                <div class="column">
                   <h2>About Me</h2>
                 </div>
             </div>
             <div class="row justify-content-start">
-                <div class="column-md">
-                  <img src="hshot.jpg" class="img-fluid rounded float-left" id="hs" alt="A picture where I don't look too uncomfortable.">
-                    <p>
+              <div class="column-md">
+                <img src="hshot.jpg" class="img-fluid rounded float-left" id="hs" alt="A picture where I don't look too uncomfortable.">
+              </div>
+              <div class="column-md">
+                <article class="w-50">
+                  <p class="text-left text-wrap">
                     Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-                    </p>
-               </div>
-            </div>  
+                  </p>
+                </article>
+              </div>
+            </div>
+
         </div>   
  
     
