--- a/2hw/index.html
+++ b/2hw/index.html
@@ -33,27 +33,29 @@
         </div>
     </nav>
 
-        <div class="container">
-            <div class="row justify-content-start">
-                <div class="column">
-                  <h2>About Me</h2>
+    <div class="container">
+        <div class="row justify-content-start">
+            <div class="column">
+              <h2>About Me</h2>
+            </div>
+        </div>
+        <div class="row justify-content-start">
+            <div class="column">
+                <div class="card mb-3" style="max-width: 700px;">
+                    <div class="row no-gutters">
+                        <div class="col-md-4">
+                         <img src="hshot.jpg" class="card-img" alt="A picture of me where I don't look too uncomfortable.">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="row justify-content-start">
-              <div class="column-md">
-                <img src="hshot.jpg" class="img-fluid rounded float-left" id="hs" alt="A picture where I don't look too uncomfortable.">
-              </div>
-              <div class="column-md">
-                <article class="w-50">
-                  <p class="text-left text-wrap">
-                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-                  </p>
-                </article>
-              </div>
-            </div>
-
-        </div>   
- 
+        </div> 
+    </div>   
     
 
       <!--Bootstrap JS links-->
