--- a/2hw/index.html
+++ b/2hw/index.html
@@ -32,31 +32,31 @@
           </ul>
         </div>
     </nav>
-
-    <div class="container">
-        <div class="row justify-content-start">
-            <div class="column">
-              <h2>About Me</h2>
+    <main>
+        <div class="container">
+            <div class="row justify-content-start">
+                <div class="column">
+                    <h2>About Me</h2>
+                </div>
             </div>
-        </div>
         <div class="row justify-content-start">
-            <div class="column">
-                <div class="card mb-3" style="max-width: 700px;">
-                    <div class="row no-gutters">
-                        <div class="col-md-4">
-                         <img src="hshot.jpg" class="card-img" alt="A picture of me where I don't look too uncomfortable.">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <div class="column">
+                    <div class="card mb-3" style="max-width: 700px;">
+                        <div class="row no-gutters">
+                            <div class="col-md-4">
+                                <img src="hshot.jpg" class="card-img" alt="A picture of me where I don't look too uncomfortable.">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <article class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</article>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div> 
-    </div>   
-    
+            </div> 
+        </div>   
+    </main>
 
       <!--Bootstrap JS links-->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
