--- a/2hw/index.html
+++ b/2hw/index.html
@@ -36,12 +36,10 @@
         <div class="container">
             <div class="row justify-content-start">
                 <div class="column">
-                    <h2>About Me</h2>
-                </div>
-            </div>
-        <div class="row justify-content-start">
-                <div class="column">
                     <div class="card mb-3" style="max-width: 700px;">
+                        <div class="row no-gutters">
+                            <h2>About Me</h2>
+                        </div>
                         <div class="row no-gutters">
                             <div class="col-md-4">
                                 <img src="hshot.jpg" class="card-img" alt="A picture of me where I don't look too uncomfortable.">
