--- a/2hw/contact.html
+++ b/2hw/contact.html
@@ -33,22 +33,29 @@
         </div>
       </nav>
     <main>
-        <div class="container" id="contact">
-        <form>
-            <div class="form-group">
-              <label for="exampleFormControlInput1">Name</label>
-              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="J Doe">
+        <div class="container">
+            <div class="row justify-content-start">
+                <h2>Contact</h2>
             </div>
-            <div class="form-group">
-                <label for="exampleFormControlInput1">Email address</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-              </div>
-            <div class="form-group">
-              <label for="exampleFormControlTextarea1"> Message</label>
-              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <div class="row justify-content-start">
+            <div class="container" id="contact">
+                <form>
+                    <div class="form-group">
+                        <label for="exampleFormControlInput1">Name</label>
+                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="J Doe">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlInput1">Email address</label>
+                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlTextarea1"> Message</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+                </form>
+                <input class="btn btn-primary" type="submit" value="Submit">
             </div>
-          </form>
-          <input class="btn btn-primary" type="submit" value="Submit">
+            </div>
         </div>
     </main>
 
