adding padding between navbar and main,changed portfolio page formatting to match others

--- a/2hw/contact.html
+++ b/2hw/contact.html
@@ -42,7 +42,7 @@
                 <form>
                     <div class="form-group">
                         <label for="exampleFormControlInput1">Name</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="J Doe">
+                        <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="J Doe">
                     </div>
                     <div class="form-group">
                         <label for="exampleFormControlInput1">Email address</label>
