--- a/2hw/portfolio.html
+++ b/2hw/portfolio.html
@@ -34,13 +34,15 @@
     </nav>
 
     <main>
-      <div class="album py-5 bg-light">
+      <div class = container>
+        <div class ="row justify-content-start">
+            <div class = col-md>
+              <h2>Portfolio</h2>
+            </div>
+          </div>
+      </div>
+      <div class="album py-5">
           <div class="container-md">
-              <div class ="row justify-content-start">
-                <div class = col-md>
-                <h2>Portfolio</h2>
-                </div>
-              </div>
               <div class="row justify-content-start">
                 <div class="col-md-4">
                   <div class="card mb-3">
