consolidated main, div tags on all pages. about me header in seperate row, as others.

--- a/2hw/portfolio.html
+++ b/2hw/portfolio.html
@@ -33,15 +33,13 @@
         </div>
     </nav>
 
-    <main>
-      <div class="container">
+    <main class="container">
         <div class="row justify-content-start">
             <div class="col-md">
               <h2>Portfolio</h2>
             </div>
         </div>
       <div class="album py-5">
-          <div class="container-md">
               <div class="row justify-content-start">
                 <div class="col-md-4">
                   <div class="card mb-3">
@@ -96,7 +94,7 @@
               </div>
           </div>
       </div>
-      </div>
+    
         
     </main>
     <!--Bootstrap JS links-->
