--- a/2hw/contact.html
+++ b/2hw/contact.html
@@ -32,8 +32,7 @@
           </ul>
         </div>
       </nav>
-    <main>
-        <div class="container">
+    <main class="container">
             <div class="row justify-content-start">
                 <h2>Contact</h2>
             </div>
@@ -56,7 +55,6 @@
                 <input class="btn btn-primary" type="submit" value="Submit">
             </div>
             </div>
-        </div>
     </main>
 
     <!--Bootstrap JS links-->
