--- a/2hw/index.html
+++ b/2hw/index.html
@@ -32,14 +32,13 @@
           </ul>
         </div>
     </nav>
-    <main>
-        <div class="container">
+    <main div class="container">
+        <div class="row justify-content-start">
+            <h2>About Me</h2>
+        </div>
             <div class="row justify-content-start">
                 <div class="column">
                     <div class="card mb-3" style="max-width: 700px;">
-                        <div class="row no-gutters">
-                            <h2>About Me</h2>
-                        </div>
                         <div class="row no-gutters">
                             <div class="col-md-4">
                                 <img src="hshot.jpg" class="card-img" alt="A picture of me where I don't look too uncomfortable.">
@@ -52,8 +51,7 @@
                         </div>
                     </div>
                 </div>
-            </div> 
-        </div>   
+            </div>    
     </main>
 
       <!--Bootstrap JS links-->
