css in progress. colors added/testing, page title underlined.

--- a/2hw/contact.html
+++ b/2hw/contact.html
@@ -34,10 +34,12 @@
       </nav>
     <main class="container">
             <div class="row justify-content-start">
-                <h2>Contact</h2>
+                <div class="col-md head">
+                  <h2>Contact</h2>
+                </div>
             </div>
-            <div class="row justify-content-start">
-            <div class="container" id="contact">
+            <div class="row justify-content-start" id="con">
+              <div class="container" id="contact">  
                 <form>
                     <div class="form-group">
                         <label for="exampleFormControlInput1">Name</label>
@@ -53,7 +55,7 @@
                     </div>
                 </form>
                 <input class="btn btn-primary" type="submit" value="Submit">
-            </div>
+              </div>
             </div>
     </main>
 
