--- a/2hw/portfolio.html
+++ b/2hw/portfolio.html
@@ -35,7 +35,7 @@
 
     <main class="container">
         <div class="row justify-content-start">
-            <div class="col-md">
+            <div class="col-md head">
               <h2>Portfolio</h2>
             </div>
         </div>
@@ -93,9 +93,7 @@
                   </div>
               </div>
           </div>
-      </div>
-    
-        
+        </div>
     </main>
     <!--Bootstrap JS links-->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
