--- a/2hw/index.html
+++ b/2hw/index.html
@@ -7,11 +7,11 @@
     <title>About</title>
     <!--Bootstrap Base CSS and Theme-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-        <!--Personal Stylesheet-->
-        <link rel="stylesheet" href=style.css>
+    <!--Personal Stylesheet-->
+    <link rel="stylesheet" href=style.css>
 </head>
 
-  <body> 
+<body> 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand">Max Nicolai</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,11 +34,13 @@
     </nav>
     <main div class="container">
         <div class="row justify-content-start">
+            <div class="col-md-8 head">
             <h2>About Me</h2>
+            </div>
         </div>
-            <div class="row justify-content-start">
-                <div class="column">
-                    <div class="card mb-3" style="max-width: 700px;">
+            <div class="row justify-content-start" id="bio">
+                <div class="col-md">
+                    <div class="card mb-3 border-0">
                         <div class="row no-gutters">
                             <div class="col-md-4">
                                 <img src="hshot.jpg" class="card-img" alt="A picture of me where I don't look too uncomfortable.">
