adjusted about me widths, customized text/link in portfolio. nav now sticky, body adjusted

--- a/2hw/index.html
+++ b/2hw/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body> 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand">Max Nicolai</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -34,7 +34,7 @@
     </nav>
     <main div class="container">
         <div class="row justify-content-start">
-            <div class="col-md-8 head">
+            <div class="col-md head">
             <h2>About Me</h2>
             </div>
         </div>
@@ -42,10 +42,10 @@
                 <div class="col-md">
                     <div class="card mb-3 border-0">
                         <div class="row no-gutters">
-                            <div class="col-md-4">
+                            <div class="col-md-3">
                                 <img src="hshot.jpg" class="card-img" alt="A picture of me where I don't look too uncomfortable.">
                             </div>
-                            <div class="col-md-8">
+                            <div class="col-md-9">
                                 <div class="card-body">
                                     <article class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</article>
                                 </div>
