--- a/2hw/portfolio.html
+++ b/2hw/portfolio.html
@@ -12,7 +12,7 @@
 </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand">Max Nicolai</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -45,7 +45,7 @@
                   <div class="card mb-3">
                     <img src="https://placeimg.com/200/200/nature" class="card-img-top" alt="Placeholder">
                     <div class="card-footer">
-                        <h5>Test</h5>
+                        <h5><a href="https://github.com/mavn2/Horiseon" class="card-link">Code Refactoring</a></h5>
                     </div>
                   </div>
                 </div>
@@ -53,7 +53,7 @@
                     <div class="card mb-3">
                       <img src="https://placeimg.com/200/200/nature" class="card-img-top" alt="Placeholder">
                       <div class="card-footer">
-                          <h5>Test</h5>
+                          <h5>Still to Come</h5>
                       </div>
                     </div>
                   </div>
@@ -61,7 +61,7 @@
                     <div class="card mb-3">
                       <img src="https://placeimg.com/200/200/nature" class="card-img-top" alt="Placeholder">
                       <div class="card-footer">
-                          <h5>Test</h5>
+                          <h5>Still to Come</h5>
                       </div>
                     </div>
                   </div>
@@ -71,7 +71,7 @@
                   <div class="card mb-3">
                     <img src="https://placeimg.com/200/200/nature" class="card-img-top" alt="Placeholder">
                     <div class="card-footer">
-                        <h5>Test</h5>
+                        <h5>Still to Come</h5>
                     </div>
                   </div>
                 </div>
@@ -79,7 +79,7 @@
                     <div class="card mb-3">
                       <img src="https://placeimg.com/200/200/nature" class="card-img-top" alt="Placeholder">
                       <div class="card-footer">
-                          <h5>Test</h5>
+                          <h5>Still to Come</h5>
                       </div>
                     </div>
                   </div>
@@ -87,7 +87,7 @@
                     <div class="card mb-3">
                       <img src="https://placeimg.com/200/200/nature" class="card-img-top" alt="Placeholder">
                       <div class="card-footer">
-                          <h5>Test</h5>
+                          <h5>Still to Come</h5>
                       </div>
                     </div>
                   </div>
