--- a/2hw/index.html
+++ b/2hw/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>About Me</title>
     <!--Bootstrap Base CSS and Theme-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <!--Personal Stylesheet-->
@@ -12,55 +12,60 @@
 </head>
 
 <body> 
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light">
-        <a class="navbar-brand">Max Nicolai</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="portfolio.html">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-          </ul>
+  <!--Navbar Header and Button-->
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light">
+    <a class="navbar-brand">Max Nicolai</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+  <!--Navbar Links-->
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+  </nav>
+    <!--Page Header-->
+  <main class="container">
+    <div class="row justify-content-start">
+      <div class="col-md head">
+        <h2>About Me</h2>
         </div>
-    </nav>
-    <main div class="container">
-        <div class="row justify-content-start">
-            <div class="col-md head">
-            <h2>About Me</h2>
-            </div>
-        </div>
-            <div class="row justify-content-start" id="bio">
-                <div class="col-md">
-                    <div class="card mb-3 border-0">
-                        <div class="row no-gutters">
-                            <div class="col-md-3">
-                                <img src="hshot.jpg" class="card-img" alt="A picture of me where I don't look too uncomfortable.">
-                            </div>
-                            <div class="col-md-9">
-                                <div class="card-body">
-                                    <article class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</article>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+    </div>
+      <!--Container for About Me-->
+    <div class="row justify-content-start" id="bio">
+        <div class="col-md">
+          <div class="card mb-3 border-0">
+      <!--Bio Image-->
+              <div class="row no-gutters">
+                <div class="col-md-3">
+                  <img src="hshot.jpg" class="card-img" alt="A picture of me where I don't look too uncomfortable.">
                 </div>
-            </div>    
-    </main>
+        <!--Bio Text-->
+              <div class="col-md-9">
+                <div class="card-body">
+                  <article class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</article>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>    
+  </main>
 
-      <!--Bootstrap JS links-->
-      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-  </body>
+  <!--Bootstrap JS links-->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+</body>
 </html>
 
