added readme, ensured images were fully responsive

--- a/2hw/index.html
+++ b/2hw/index.html
@@ -47,7 +47,7 @@
       <!--Bio Image-->
               <div class="row no-gutters">
                 <div class="col-md-3">
-                  <img src="hshot.jpg" class="card-img" alt="A picture of me where I don't look too uncomfortable.">
+                  <img src="hshot.jpg" class="img-fluid card-img" alt="A picture of me where I don't look too uncomfortable.">
                 </div>
         <!--Bio Text-->
               <div class="col-md-9">
