--- a/2hw/portfolio.html
+++ b/2hw/portfolio.html
@@ -47,7 +47,7 @@
               <!--Each of these columns contains a card, which presents a portfolio item-->
                 <div class="col-md-4">
                   <div class="card mb-3">
-                    <img src="https://placeimg.com/200/200/nature" class="card-img-top" alt="Placeholder">
+                    <img src="https://placeimg.com/200/200/nature" class="img-fluid card-img-top" alt="Placeholder">
                     <div class="card-footer">
                       <!--Link to last homework-->
                         <h5><a href="https://github.com/mavn2/Horiseon" class="card-link">Code Refactoring</a></h5>
@@ -56,7 +56,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card mb-3">
-                      <img src="https://placeimg.com/200/200/nature" class="card-img-top" alt="Placeholder">
+                      <img src="https://placeimg.com/200/200/nature" class="img-fluid card-img-top" alt="Placeholder">
                       <div class="card-footer">
                           <h5>Still to Come</h5>
                       </div>
@@ -64,7 +64,7 @@
                   </div>
                   <div class="col-md-4">
                     <div class="card mb-3">
-                      <img src="https://placeimg.com/200/200/nature" class="card-img-top" alt="Placeholder">
+                      <img src="https://placeimg.com/200/200/nature" class="img-fluid card-img-top" alt="Placeholder">
                       <div class="card-footer">
                           <h5>Still to Come</h5>
                       </div>
@@ -74,7 +74,7 @@
               <div class="row justify-content-start">
                 <div class="col-md-4">
                   <div class="card mb-3">
-                    <img src="https://placeimg.com/200/200/nature" class="card-img-top" alt="Placeholder">
+                    <img src="https://placeimg.com/200/200/nature" class="img-fluid card-img-top" alt="Placeholder">
                     <div class="card-footer">
                         <h5>Still to Come</h5>
                     </div>
@@ -82,7 +82,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card mb-3">
-                      <img src="https://placeimg.com/200/200/nature" class="card-img-top" alt="Placeholder">
+                      <img src="https://placeimg.com/200/200/nature" class="img-fluid card-img-top" alt="Placeholder">
                       <div class="card-footer">
                           <h5>Still to Come</h5>
                       </div>
@@ -90,7 +90,7 @@
                   </div>
                   <div class="col-md-4">
                     <div class="card mb-3">
-                      <img src="https://placeimg.com/200/200/nature" class="card-img-top" alt="Placeholder">
+                      <img src="https://placeimg.com/200/200/nature" class="img-fluid card-img-top" alt="Placeholder">
                       <div class="card-footer">
                           <h5>Still to Come</h5>
                       </div>
