I did not forget an about me

--- a/2hw/index.html
+++ b/2hw/index.html
@@ -52,7 +52,14 @@
         <!--Bio Text-->
               <div class="col-md-9">
                 <div class="card-body">
-                  <article class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</article>
+                  <article class="card-text">My earliest passions were books and music, art that allowed me to expand my horizons and experience, at least on some level, the world through others' eyes.
+                    I found my third passion in the internet. Nowhere else could I explore as easily, learn as readily, connect as eagerly. For a long time I gave all credit to what I found there for shaping
+                    the person I became, but as the internet changed in the last decade I have become more and more aware of how affected I was by the shape and function of the network itself.
+                    <br><br>
+                    Studying English in college, I focused on examing the ways in which form dictates the terms of our experience with content--is, really, content in itself. My interests in coding are 
+                    the same: user experience, but more than that the structures that store, catalogue, and surface information to be experienced. I am interested in databases, in data analytics, in what we can
+                    learn from what our devices learn about us. In sum, I remain as much as love with learning as I have always been, eager to challenge myself and eager to find new ways to think and to create.
+                  </article>
                 </div>
               </div>
             </div>
