added a header, for now

--- a/3hw/index.html
+++ b/3hw/index.html
@@ -10,6 +10,14 @@
 </head>
 
 <body>
+  <!--Site Header-->
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h1 class="display-4">Password Generator</h1>
+    </div>
+  </div>
+  <!--Generator Body-->
+  
 
 <!-- Bootstrap JS, Popper.js, and jQuery -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
