structure for html elements

--- a/index.html
+++ b/index.html
@@ -23,13 +23,28 @@
     </head>
 
     <body>
-        <iframe> src=" " title = "me" alt = "a picture of me"</iframe>
-        <h1>About me!</h1>
-        <h2>Some Words About Me:</h2>
-        <p>I'm making this page pretty quick, here. I like a lot of things. I was behind but I'm catching up.</p>
-        <p>I think I need to make a new ssh code after class-we'll see how that goes.</p>
+        <ul class="nav">
+            <li class="nav-item">
+              <a class="nav-link active" href="#bio">Bio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#links">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
 
-        <ul>
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            </li>
+          </ul>
+        <iframe> src=" " title = "me" alt = "a picture of me"</iframe>
+        <h1>Test About Me!</h1>
+        <h2 id="bio">Some Words About Me:</h2>
+        <p>I'm making this page pretty quick, here. I'm doing bootstrap.</p>
+        <p>Maybe I'll move this text around later.</p>
+        <p>Maybe to the side?</p>
+
+        <ul id="links">
             <li>Email</li>
             <li>Github</li>
             <li>Portfolio</li>
