placed card in container to control width on large screens

--- a/3hw/index.html
+++ b/3hw/index.html
@@ -19,16 +19,17 @@
     </div>
 
   <!--Generator Body-->
-    <div class="card">
-        <div class="card-header">
-            <h5>Generate a Password</h5>
+    <div class="container-lg">
+        <div class="card">
+            <div class="card-header">
+                <h5>Generate a Password</h5>
+            </div>
+            <div class="card-body">
+                <p>Your Secure Password</p>
+            </div>
+            <button class="btn btn-primary" id="generate">Generate</button>
         </div>
-        <div class="card-body">
-            <p>Your Secure Password</p>
-        </div>
-        <button class="btn btn-primary" id="generate">Generate</button>
     </div>
-
   <!-- Bootstrap JS, Popper.js, and jQuery -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
