reached desired formatting-placed card in container-lg to center/control width, applied custom class in css to remove margins, allowing edge to edge on small screens. Credit for inspiration in readme.

--- a/3hw/index.html
+++ b/3hw/index.html
@@ -19,15 +19,17 @@
     </div>
 
   <!--Generator Body-->
-            <div class="card">
-                <div class="card-header">
-                    <h5>Generate a Password</h5>
-                </div>
-                <div class="card-body">
-                    <p>Your Secure Password</p>
-                </div>
-                <button class="btn btn-primary" id="generate">Generate</button>
+    <div class="container-lg full-width">
+        <div class="card">
+            <div class="card-header">
+                <h5>Generate a Password</h5>
             </div>
+            <div class="card-body">
+                <p>Your Secure Password</p>
+            </div>
+            <button class="btn btn-primary" id="generate">Generate</button>
+        </div>
+    </div>
         
   <!-- Bootstrap JS, Popper.js, and jQuery -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
