replaced div with sematic tags

--- a/3hw/index.html
+++ b/3hw/index.html
@@ -12,14 +12,14 @@
 
 <body>
   <!--Site Header-->
-    <div class="jumbotron jumbotron-fluid">
+    <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <h1 class="display-4">Password Generator</h1>
         </div>
-    </div>
+    </header>
 
   <!--Generator Body-->
-    <div class="container-lg full-width">
+    <main class="container-lg full-width">
         <div class="card shadow-sm">
             <div class="card-header bg-transparent">
                 <h5>Generate a Password</h5>
@@ -33,7 +33,7 @@
                 <button type="button" class="btn btn-primary" id="generate">Generate</button>
             </div>
         </div>
-    </div>
+    </main>
         
   <!-- Bootstrap JS, Popper.js, and jQuery -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
