added copy button to index

--- a/3hw/index.html
+++ b/3hw/index.html
@@ -31,6 +31,7 @@
             </div>
             <div class ="card-footer text-center bg-transparent">
                 <button type="button" class="btn btn-primary" id="generate">Generate</button>
+                <button type="button" class="btn btn-danger" id="copy">Copy</button>
             </div>
         </div>
     </main>
