working on copy-main text now form, copy works, but needs formatting

--- a/3hw/index.html
+++ b/3hw/index.html
@@ -26,7 +26,7 @@
       </div>
       <div class="card-body">
         <div class="text-center">
-          <p>Your Secure Password</p>
+          <input type="text" value="Your secure password!" id="pW"> 
         </div>
       </div>
       <div class ="card-footer text-center bg-transparent">
@@ -35,8 +35,6 @@
       </div>
     </div>
   </main>
-  <!--Hidden input field to hold Password for copying-->
-  <input type="text" value="" id="pW">
         
   <!-- Bootstrap JS, Popper.js, and jQuery -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
