added on click for putton, JSON to retrieve array from local storage

--- a/4hw/index.html
+++ b/4hw/index.html
@@ -21,11 +21,14 @@
   </header>
   <main>
     <div class='card'>
-        <div class="card-text text-center">
+        <div class='card-header text-center bg-transparent' id='title'>
+            <h3>Coding Quiz!</h3>
+        </div>
+        <div class="card-text text-center" id='center'>
           <p>Take this coding quiz! 15 Seconds per questions! Try to get a hi-score!</p>
         </div>
-        <div class='card-footer'>
-            <button type="button" class="btn btn-primary">Start</button>
+        <div class='card-footer text-center bg-transparent' id='bottom'>
+            <button type="button" class="btn btn-primary" id="start">Start</button>
         </div>
     </div>  
   </main>
