answer choices now in list items, i'm happy with functionality if not appearance

--- a/4hw/index.html
+++ b/4hw/index.html
@@ -27,7 +27,7 @@
         <div class='card-text text-center'>
           <p id='center'>Take this coding quiz! 15 Seconds per questions! Try to get a hi-score!</p>
           <!--empty element used to position answer buttons-->
-          <p id='hanger'></p>
+          <ul id='hanger'></ul>
         </div>
         <div class='card-footer text-center bg-transparent' id='bottom'>
             <button type="button" class="btn btn-primary" id="start">Start</button>
