changed classes in card html, answer buttons no longer centered

--- a/4hw/index.html
+++ b/4hw/index.html
@@ -24,8 +24,8 @@
         <div class='card-header text-center bg-transparent' id='top'>
             <h3>Coding Quiz!</h3>
         </div>
-        <div class='card-text text-center'>
-          <p id='center'>Take this coding quiz! 10 Seconds per question! Try to get a hi-score!</p>
+        <div class='card-body'>
+          <p class='card-text text-center' id='center'>Take this coding quiz! 10 Seconds per question! Try to get a hi-score!</p>
           <!--empty element used to position answer buttons-->
           <ul id='hanger'></ul>
         </div>
