nameField now hidden by default, appears when recordScore function is called

--- a/4hw/index.html
+++ b/4hw/index.html
@@ -20,7 +20,7 @@
     </div>
   </header>
   <main>
-    <div class='card'>
+    <div class='card shadow-sm'>
         <div class='card-header text-center bg-transparent' id='top'>
             <h3>Coding Quiz!</h3>
         </div>
@@ -29,13 +29,12 @@
           <ul class='card-text text-left' id='hanger'></ul>
           <div id="nameField">
             <p class='card-text'>Please enter your name and click the button to save your high score!</p>
-            <div class="input">
+            <div class="form">
               <input type="text" class="form align-middle" id="name" placeholder="Your name here!">
               <button class="btn btn-outline-secondary btn-sm align-middle" type="button" id="save">Save</button>
             </div>
           </div>
         </div>
-      
       
         <div class='card-footer text-center bg-transparent' id='bottom'>
             <button type="button" class="btn btn-primary" id="start">Start</button>
