--- a/4hw/index.html
+++ b/4hw/index.html
@@ -21,9 +21,9 @@
   </header>
   <main>
     <div class='card shadow-sm'>
-        <div class='card-header text-center bg-transparent' id='top'>
-            <h3 class = "align-middle">Coding Quiz!</h3>
-            <h3 class="text-right align-middle" id="countdown"></h3>
+        <div class='card-header bg-transparent'>
+            <h3 class="align-middle text-center" id="top">Coding Quiz!</h3>
+            <h6 class="text-right align-middle" id="countdown"></h6>
         </div>
         <div class='card-body text-center'>
           <p class='card-text' id='center'>Take this coding quiz! 10 Seconds per question! Try to get a hi-score!</p>
