added view highscores button, updated card css/bootstrap classes

--- a/4hw/index.html
+++ b/4hw/index.html
@@ -19,7 +19,7 @@
       </div>
     </div>
   </header>
-  <main>
+  <main class="container-lg full-width p-0">
     <div class='card shadow-sm'>
         <div class='card-header bg-transparent'>
             <h3 class="align-middle text-center" id="top">Coding Quiz!</h3>
@@ -32,13 +32,14 @@
             <p class='card-text'>Please enter your name and click the button to save your high score!</p>
             <div class="form">
               <input type="text" class="form align-middle" id="name" placeholder="Your name here!">
-              <button class="btn btn-outline-secondary btn-sm align-middle" type="button" id="save">Save</button>
+              <button class="btn btn-success btn-sm align-middle" type="button" id="save">Save</button>
             </div>
           </div>
         </div>
       
         <div class='card-footer text-center bg-transparent' id='bottom'>
-            <button type="button" class="btn btn-primary" id="start">Start</button>
+            <button type="button" class="btn btn-primary" id="start"> Start </button>
+            <button type="button" class="btn btn-danger" id="view">Scoreboard</button>
         </div>
     </div>  
   </main>
