highscore function complete. added while loop to start button to clean items.

--- a/4hw/index.html
+++ b/4hw/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class='card-body text-center'>
           <p class='card-text' id='center'>Take this coding quiz! 15 Seconds per question! Try to get a hi-score!</p>
-          <ul class='card-text text-left' id='hanger'></ul>
+          <ol class='card-text text-left' id='hanger'></ol>
           <div id="nameField">
             <p class='card-text'>Please enter your name and click the button to save your high score!</p>
             <div class="form">
